<resources>
    <string name="app_name">Reimburse</string>
    <string name="app_main">List Project</string>
    <string name="app_recap">Recapitulation</string>
    <string name="app_add_record">Add Record</string>
    <string name="app_version">20220410 - Juara Android</string>
    <string name="file_provider">dev.geoit.android.reimburseapppro.fileprovider</string>

    <string name="project_name">Project Name</string>
    <string name="btn_add_record">Add Record</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expense</string>
    <string name="balance">Balance</string>
    <string name="zero">0.0</string>
    <string name="tag_create">Create</string>
    <string name="tag_cancel">Cancel</string>
    <string name="tag_delete">Delete</string>
    <string name="tag_download">Download</string>
    <string name="tag_type">Type</string>
    <string name="tag_nominal">Nominal</string>
    <string name="tag_description">Description</string>
    <string name="tag_receipt">Receipt</string>
    <string name="tag_comment">Comment</string>
    <string name="tag_photo">Photo</string>
    <string name="tag_camera">Camera</string>
    <string name="tag_gallery">Gallery</string>
    <string name="title_delete_record">Delete Record?</string>
    <string name="title_download_project">Download Project?</string>
    <string name="title_delete_project">Delete Project?</string>
    <string name="msg_delete_record">Are you sure you want to delete this record?</string>
    <string name="msg_delete_project">Are you sure you want to delete this project?</string>
    <string name="msg_project_deleted">Project deleted!</string>
    <string name="msg_downloading">Downloading…</string>
    <string name="msg_download_finished">Download finished!</string>

    <string name="double_back_pressed_to_exit">Press again to exit~</string>
    <string name="allow_write_permission">You need to allow storage permission to create new project!</string>
    <string name="min_project_name">Project name at least 5 characters!</string>
    <string name="project_created">Project created!</string>
    <string name="project_not_exist">Project not exist!</string>
    <string name="nominal_and_desc_not_empty">Nominal and Description must not empty!</string>
    <string name="msg_failed_to_take_photo">Failed to take a photo!</string>
    <string name="msg_failed_to_choose_picture">Failed to choose a picture!</string>
    <string name="msg_failed_to_show_image">Failed to show the image!</string>
    <string name="msg_record_saved">Data saved!</string>
</resources>