<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CLParentAddRecord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreenTransparent"
    tools:context=".AddRecordActivity"
    tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_type" />

            <Spinner
                android:id="@+id/spnARType"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/type"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_nominal" />

            <EditText
                android:id="@+id/edtARNominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/zero"
                android:inputType="numberDecimal"
                android:maxLength="9"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_description" />

            <EditText
                android:id="@+id/edtARDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textCapWords"
                android:maxLength="24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_receipt" />

            <Spinner
                android:id="@+id/spnARReceipt"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/receipt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_comment" />

            <EditText
                android:id="@+id/edtARComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine|text|textCapSentences"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_photo" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#80FFFFFF"
                android:padding="8dp"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:id="@+id/LLARPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgARPhoto"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_baseline_camera_alt_24"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>