<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/LLDDParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvDDDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_type"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/edtDDType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@android:color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_nominal" />

            <EditText
                android:id="@+id/edtDDNominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="number"
                android:maxLength="9"
                android:textColor="@android:color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_description" />

            <EditText
                android:id="@+id/edtDDDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="text|textCapWords"
                android:maxLength="24"
                android:textColor="@android:color/black"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_receipt" />

            <EditText
                android:id="@+id/edtDDReceipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="text|textCapWords"
                android:maxLength="24"
                android:textColor="@android:color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_comment" />

            <EditText
                android:id="@+id/edtDDComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textMultiLine|text|textCapSentences"
                android:textColor="@android:color/black"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tag_photo" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#80FFFFFF"
                android:padding="8dp"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:id="@+id/LLDDPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDDDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@android:color/holo_red_light"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDDClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>