<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecapitulationActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecapitulation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/LLRecapBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LLRecapBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tblLayoutRecap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddRecapDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@android:color/holo_red_dark"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_delete_24"
            app:tint="@android:color/white"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddRecapDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:backgroundTint="@android:color/holo_orange_dark"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_download_24"
            app:tint="@android:color/white"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

        <Button
            android:id="@+id/btnAddRecap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_record"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tblLayoutRecap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryLightColor"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:text="@string/total_income"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:text="@string/zero"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:text="@string/total_expense"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:text="@string/zero"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:text="@string/balance"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:text="@string/zero"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>